Update step by step

--- a/hexlet_django_blog/Makefile
+++ b/hexlet_django_blog/Makefile
@@ -1,2 +1,9 @@
 dev:
 	 poetry run python manage.py runserver
+console:
+	poetry run python manage.py shell --ipython
+migrate:
+	poetry run python manage.py makemigrations
+	poetry run python manage.py migrate
+superuser:
+	poetry run python manage.py createsuperuser
