--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "hexlet_django_blog"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "^4.1.5"
+python-dotenv = "^0.21.0"
 
 
 [build-system]
